// PoC Proto Definition
// Validates gRPC service invocation via DAPR proxy
syntax = "proto3";

package poc.v1;

// EchoService - exposed by Service A
service EchoService {
  // Simple echo - returns the same message
  rpc Echo(EchoRequest) returns (EchoResponse);
}

// CalculatorService - exposed by Service B
service CalculatorService {
  // Add two numbers
  rpc Add(AddRequest) returns (AddResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
  string service = 2;  // Which service responded
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 result = 1;
  string service = 2;  // Which service responded
}
